--- a/tugas1.html
+++ b/tugas1.html
@@ -249,7 +249,7 @@
             </ul>
             <h4>4. Membuka Link di Tab Baru</h4>
             <p><img src="assets/wbbaru.png" alt="img" width="500px" height="100px"></p>
-            <a href="https://www.petanikode.com" target="_blank">Kunjungi PetaniKode</a>
+            <a href="https://dinus.ac.id/" target="_blank">Kunjungi Website Udinus</a>
             <ul>
                 <li>Atribut target="_blank" membuat tautan terbuka di tab baru.</li>
                 <li>Hal ini berguna jika ingin pengguna tetap berada di halaman utama.</li>
@@ -296,6 +296,16 @@
         <h4>3. Dari Internet (URL / Online Resource)</h4>
         Menggunakan alamat gambar langsung dari sebuah website.
         <p><img src="assets/imginter.png" alt="" width="500px" height="100px"></p>
+        <h4>4. Gambar dengan Link (bisa diklik)</h4>
+        <a href="https://dinus.ac.id/"><img src="assets/udinus.png" /></a>
+        <p>Penjelasan:
+            <ul>
+            <li>Tag a (anchor) → digunakan untuk membuat link.</li>
+            <li>href="https://dinus.ac.id/" berarti saat gambar diklik, user akan diarahkan ke website Dinus.Tag (image) → digunakan untuk menampilkan gambar.</li>
+            <li>src="assets/udinus.png" menunjukkan lokasi file gambar yang ditampilkan.</li>
+
+            Karena gambar dimasukkan ke dalam tag (a), maka gambar tersebut menjadi link yang bisa diklik.
+            Jadi, alih-alih teks link, gambarnya yang berfungsi sebagai tombol/link.</ul></p>
     </section>
 <h1>Membuat Daftar (List) pada HTML</h1>
 <section>
