--- a/tugas1.html
+++ b/tugas1.html
@@ -342,9 +342,11 @@
     Seperti ini tampilan 3 list yang sudah dibuat
     <p><img src="assets/tamplitanlist.png" alt="" width="500px"></p>
 </section>
+<a href="https://github.com/rasyidahnuraini/Tugas-1-PBW">Github Rasyidah Nuraini</a>
 <footer style="text-align:center; margin-top:30px; font-size:0.9em; color:gray;">
     &copy; 2025 Rasyidah Nuraini - A11.2024.15721
   </footer>
 </body>
 </html>
+
 
